--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-<div class="container-fluid">
+<%= render 'layouts/header' %>
+<div class="container">
   <%= yield %>
+  <%= render 'layouts/footer' %>
 </div>
 
 </body>
