--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,9 @@
-<h2>Amazing electronic gadget collection</h2>
+<div class="center jumbotron">
+  <h2>Amazing electronic gadget collection</h2>
   <table>
     <tr>
       <th><%= link_to 'Signup', new_user_path %></th>
-      <th><%= link_to 'Signin', users_path %></th>
+      <th><%= link_to 'Signin', login_path %></th>
     </tr>
   </table>
+</div>
