--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,9 +1,15 @@
 <div class="center jumbotron">
   <h2>Amazing electronic gadget collection</h2>
-  <table>
-    <tr>
-      <th><%= link_to 'Signup', new_user_path %></th>
-      <th><%= link_to 'Signin', login_path %></th>
-    </tr>
-  </table>
+    <% if logged_in? %>
+
+        <div><%= link_to "My gadgets", user_gadgets_path(@current_user) %></div>
+        <div><%= link_to "My Profile", user_path(@current_user) %></div>
+        <div><%= link_to "Create Gadget", new_user_gadget_path(@current_user) %></div>
+
+    <% else %>
+      <tr>
+        <th><%= link_to "Signup", new_user_path %></th>
+        <th><%= link_to "Signin", login_path %></th>
+      </tr>
+    <% end %>
 </div>
