--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -1,4 +1,2 @@
-<p>
-  <%= @gadget.name %>
-  <%= image_tag @gadget.image_url.to_s %>
-</p>
+<p><%= @gadget.name %></p>
+<p><%= image_tag @gadget.image_url.to_s %></p>
