--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,10 @@
 <header class="navbar navbar-inverse">
   <div class="container">
-    <%= link_to "Gadget Collection", root_path, id: "logo" %>
+    <nav>
+      <ul class="nav navbar-nav pull-left">
+        <li><%= link_to "Gadget Collection", root_path, id: "logo" %></li>
+      </ul>
+    </nav>
     <nav>
       <ul class="nav navbar-nav pull-right">
         <li><%= link_to "Home", root_path %></li>
@@ -8,20 +12,17 @@
           <li><%= link_to "Profile", current_user %></li>
 
           <li><%= form_tag search_path, method: :get do %>
-            <%= text_field_tag :search, "Search gadgets" %>
-            <%= submit_tag "Search" %>
-          <% end %></li>
+              <%= text_field_tag :search, "Search gadgets" %>
+              <%= submit_tag "Search" %>
+            <% end %></li>
 
-          <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+          <li><%= link_to "Log out", logout_path %></li>
           <li class="divider"></li>
-          <li>
 
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
           <li>
         <% end %>
-
-        <li><%= link_to "Users", users_path %></li>
 
       </ul>
     </nav>
