--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
 <body>
 <%= render 'layouts/header' %>
 <div class="container">
-  <%= yield %>
-  <%= render 'layouts/footer' %>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <%= yield %>
+    </div>
+  </div>
 </div>
 
 </body>
