--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,15 +1,12 @@
 <div class="center jumbotron">
   <h2>Amazing electronic gadget collection</h2>
-    <% if logged_in? %>
+  <% if logged_in? %>
 
-        <div><%= link_to "My gadgets", user_gadgets_path(@current_user) %></div>
-        <div><%= link_to "My Profile", user_path(@current_user) %></div>
-        <div><%= link_to "Create Gadget", new_user_gadget_path(@current_user) %></div>
+    <div><%= link_to "My gadgets", user_gadgets_path(@current_user) %></div>
+    <div><%= link_to "My Profile", user_path(@current_user) %></div>
+    <div><%= link_to "Create Gadget", new_user_gadget_path(@current_user) %></div>
 
-    <% else %>
-      <tr>
-        <th><%= link_to "Signup", new_user_path %></th>
-        <th><%= link_to "Signin", login_path %></th>
-      </tr>
-    <% end %>
+  <% else %>
+    <div><%= link_to "Create Account", new_user_path %></div>
+  <% end %>
 </div>
