--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,27 @@
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <%= form_for @user do |f| %>
+<h3>Create Account</h3>
 
-      <p>
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-      </p>
-      <p>
-      <%= f.label :email %>
-      <%= f.text_field :email, class: 'form-control' %>
-      </p>
-      <p>
-      <%= f.label :password %>
-      <%= f.text_field :password, class: 'form-control' %>
-      </p>
-      <p>
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.text_field :password_confirmation, class: 'form-control' %>
-      </p>
+<%= form_for @user do |f| %>
 
-      <%= f.submit "Create User", class: "btn btn-primary" %>
+  <p>
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+  </p>
+  <p>
+    <%= f.label :email %>
+    <%= f.text_field :email, class: 'form-control' %>
+  </p>
+  <p>
+    <%= f.label :password %>
+    <%= f.text_field :password, class: 'form-control' %>
+  </p>
+  <p>
+    <%= f.label :password_confirmation, "Confirmation" %>
+    <%= f.text_field :password_confirmation, class: 'form-control' %>
+  </p>
 
-      <%= render 'shared/error_messages' %>
+  <%= f.submit "Create User", class: 'btn btn-primary' %>
+  <p>
+    <%= render 'shared/error_messages' %>
+  </p>
 
-    <% end %>
-  </div>
-</div>
+<% end %>
